@@ -220,6 +220,20 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
 
+        <record model="ir.sequence.type" id="sequence_type_product">
+            <field name="name">Product</field>
+            <field name="code">product.product</field>
+        </record>
+        <record model="ir.sequence.type-res.group"
+            id="sequence_type_product_group_admin">
+            <field name="sequence_type" ref="sequence_type_product"/>
+            <field name="group" ref="res.group_admin"/>
+        </record>
+        <record model="ir.sequence.type-res.group"
+            id="sequence_type_product_group_product_admin">
+            <field name="sequence_type" ref="sequence_type_product"/>
+            <field name="group" ref="group_product_admin"/>
+        </record>
 
     </data>
 </tryton>
