@@ -4,4 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="default_cost_price_method"/>
     <field name="default_cost_price_method"/>
+    <label name="product_sequence"/>
+    <field name="product_sequence"/>
 </form>
