@@ -1,3 +1,4 @@
+* Allow the product code to be set by a sequence
 * Allow UoM conversion between different categories
 * Add product identifiers
 
